Bugs in Sidebar corrected

--- a/index.html
+++ b/index.html
@@ -65,12 +65,12 @@
             <div id="content-container">
                 <div id="project-container">
                     <div class="project-card">
-                        <div class="heading">Super Cool Project</div>
-                        <div class="text-description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer
+                        <p class="heading">Super Cool Project</p>
+                        <p class="text-description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer
                             dictum nunc turpis, sit amet finibus sem ullamcorper in. Aliquam vitae faucibus neque.
                             Suspendisse potenti. Fusce vel ante volutpat lectus luctus porttitor ac ut leo. Phasellus id
                             euismod urna. Nam iaculis pulvinar dignissim. Nunc ultricies viverra erat, eu accumsan leo
-                            ullamcorper.</div>
+                            ullamcorper.</p>
                         <div class="card-essential-sign-container">
                             <img src="./images/star-plus-outline.svg">
                             <img src="./images/eye-plus-outline.svg">
@@ -78,12 +78,12 @@
                         </div>
                     </div>
                     <div class="project-card">
-                        <div class="heading">Less Cool Project</div>
-                        <div class="text-description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer
+                        <p class="heading">Less Cool Project</p>
+                        <p class="text-description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer
                             dictum nunc turpis, sit amet finibus sem ullamcorper in. Aliquam vitae faucibus neque.
                             Suspendisse potenti. Fusce vel ante volutpat lectus luctus porttitor ac ut leo. Phasellus id
                             euismod urna. Nam iaculis pulvinar dignissim. Nunc ultricies viverra erat, eu accumsan leo
-                            ullamcorper.</div>
+                            ullamcorper.</p>
                         <div class="card-essential-sign-container">
                             <img src="./images/star-plus-outline.svg">
                             <img src="./images/eye-plus-outline.svg">
@@ -91,12 +91,12 @@
                         </div>
                     </div>
                     <div class="project-card">
-                        <div class="heading">Impossible App</div>
-                        <div class="text-description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer
+                        <p class="heading">Impossible App</p>
+                        <p class="text-description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer
                             dictum nunc turpis, sit amet finibus sem ullamcorper in. Aliquam vitae faucibus neque.
                             Suspendisse potenti. Fusce vel ante volutpat lectus luctus porttitor ac ut leo. Phasellus id
                             euismod urna. Nam iaculis pulvinar dignissim. Nunc ultricies viverra erat, eu accumsan leo
-                            ullamcorper.</div>
+                            ullamcorper.</p>
                         <div class="card-essential-sign-container">
                             <img src="./images/star-plus-outline.svg">
                             <img src="./images/eye-plus-outline.svg">
@@ -104,12 +104,12 @@
                         </div>
                     </div>
                     <div class="project-card">
-                        <div class="heading">Easy Peasy App</div>
-                        <div class="text-description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer
+                        <p class="heading">Easy Peasy App</p>
+                        <p class="text-description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer
                             dictum nunc turpis, sit amet finibus sem ullamcorper in. Aliquam vitae faucibus neque.
                             Suspendisse potenti. Fusce vel ante volutpat lectus luctus porttitor ac ut leo. Phasellus id
                             euismod urna. Nam iaculis pulvinar dignissim. Nunc ultricies viverra erat, eu accumsan leo
-                            ullamcorper.</div>
+                            ullamcorper.</p>
                         <div class="card-essential-sign-container">
                             <img src="./images/star-plus-outline.svg">
                             <img src="./images/eye-plus-outline.svg">
@@ -117,12 +117,12 @@
                         </div>
                     </div>
                     <div class="project-card">
-                        <div class="heading">Ad Blocker</div>
-                        <div class="text-description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer
+                        <p class="heading">Ad Blocker</p>
+                        <p class="text-description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer
                             dictum nunc turpis, sit amet finibus sem ullamcorper in. Aliquam vitae faucibus neque.
                             Suspendisse potenti. Fusce vel ante volutpat lectus luctus porttitor ac ut leo. Phasellus id
                             euismod urna. Nam iaculis pulvinar dignissim. Nunc ultricies viverra erat, eu accumsan leo
-                            ullamcorper.</div>
+                            ullamcorper.</p>
                         <div class="card-essential-sign-container">
                             <img src="./images/star-plus-outline.svg">
                             <img src="./images/eye-plus-outline.svg">
@@ -130,12 +130,12 @@
                         </div>
                     </div>
                     <div class="project-card">
-                        <div class="heading">Money Maker</div>
-                        <div class="text-description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer
+                        <p class="heading">Money Maker</p>
+                        <p class="text-description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer
                             dictum nunc turpis, sit amet finibus sem ullamcorper in. Aliquam vitae faucibus neque.
                             Suspendisse potenti. Fusce vel ante volutpat lectus luctus porttitor ac ut leo. Phasellus id
                             euismod urna. Nam iaculis pulvinar dignissim. Nunc ultricies viverra erat, eu accumsan leo
-                            ullamcorper.</div>
+                            ullamcorper.</p>
                         <div class="card-essential-sign-container">
                             <img src="./images/star-plus-outline.svg">
                             <img src="./images/eye-plus-outline.svg">
